Moves portfolio access check to controllers. Adds endpoint to get overview of holding in portfolio.
