# src/api/routes/portfolio/transactions/controller.ts
@@ -1,9 +1,19 @@
 import { NextFunction, Request, Response } from "express";
+import ERROR_MESSAGES from "../../../../constants/error-messages";
+import { ErrorType } from "../../../../enums/error";
+import ErrorService from "../../../../services/error";
+import PortfolioService from "../../../../services/portfolio";
 import PTransactionService from "../../../../services/portfolio/transaction";
 
 export const addTransaction = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const newTransaction = await PTransactionService.addToPortfolio(req.user!, req.params.portfolioId, req.body);
+    const portfolioId = req.params.portfolioId;
+    const user = req.user!;
+    const hasAccess = await PortfolioService.hasAccess(user, portfolioId);
+    if (!hasAccess) {
+      throw new ErrorService(ErrorType.Unauthorized, ERROR_MESSAGES.PORTFOLIO_UNAUTHORIZED_ACTION);
+    }
+    const newTransaction = await PTransactionService.addToPortfolio(portfolioId, req.body);
     const newTransactionDTO = PTransactionService.toTransactionDTO(newTransaction);
     res.send(newTransactionDTO);
   } catch (err) {
@@ -13,8 +23,14 @@ export const addTransaction = async (req: Request, res: Response, next: NextFunc
 
 export const deleteTransactions = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const deletedTransactions = await PTransactionService.deleteMany(req.user!, req.params.portfolioId!, req.query);
-    const deletedTransactionsDTO = PTransactionService.toTransactionsDTO(deletedTransactions);
+    const portfolioId = req.params.portfolioId;
+    const user = req.user!;
+    const hasAccess = await PortfolioService.hasAccess(user, portfolioId);
+    if (!hasAccess) {
+      throw new ErrorService(ErrorType.Unauthorized, ERROR_MESSAGES.PORTFOLIO_UNAUTHORIZED_ACTION);
+    }
+    const deletedTransactions = await PTransactionService.deleteMany(portfolioId, req.query);
+    const deletedTransactionsDTO = PTransactionService.toTransactionDTOs(deletedTransactions);
     res.send(deletedTransactionsDTO);
   } catch (err) {
     next(err);
@@ -23,8 +39,14 @@ export const deleteTransactions = async (req: Request, res: Response, next: Next
 
 export const getTransactions = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const transactions = await PTransactionService.getMany(req.user!, req.params.portfolioId, req.query);
-    const transactionsDTO = PTransactionService.toTransactionsDTO(transactions);
+    const portfolioId = req.params.portfolioId;
+    const user = req.user!;
+    const hasAccess = await PortfolioService.hasAccess(user, portfolioId);
+    if (!hasAccess) {
+      throw new ErrorService(ErrorType.Unauthorized, ERROR_MESSAGES.PORTFOLIO_UNAUTHORIZED_ACTION);
+    }
+    const transactions = await PTransactionService.getMany(portfolioId, req.query);
+    const transactionsDTO = PTransactionService.toTransactionDTOs(transactions);
     res.send(transactionsDTO);
   } catch (err) {
     next(err);
@@ -33,7 +55,13 @@ export const getTransactions = async (req: Request, res: Response, next: NextFun
 
 export const getTransactionById = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const transaction = await PTransactionService.getById(req.user!, req.params.portfolioId, req.params.id);
+    const portfolioId = req.params.portfolioId;
+    const user = req.user!;
+    const hasAccess = await PortfolioService.hasAccess(user, portfolioId);
+    if (!hasAccess) {
+      throw new ErrorService(ErrorType.Unauthorized, ERROR_MESSAGES.PORTFOLIO_UNAUTHORIZED_ACTION);
+    }
+    const transaction = await PTransactionService.getById(portfolioId, req.params.id);
     const transactionDTO = PTransactionService.toTransactionDTO(transaction);
     res.send(transactionDTO);
   } catch (err) {
@@ -43,12 +71,13 @@ export const getTransactionById = async (req: Request, res: Response, next: Next
 
 export const updateTransactionById = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const updatedTransaction = await PTransactionService.updateById(
-      req.user!,
-      req.params.portfolioId,
-      req.params.id,
-      req.body
-    );
+    const portfolioId = req.params.portfolioId;
+    const user = req.user!;
+    const hasAccess = await PortfolioService.hasAccess(user, portfolioId);
+    if (!hasAccess) {
+      throw new ErrorService(ErrorType.Unauthorized, ERROR_MESSAGES.PORTFOLIO_UNAUTHORIZED_ACTION);
+    }
+    const updatedTransaction = await PTransactionService.updateById(portfolioId, req.params.id, req.body);
     const updatedTransactionDTO = PTransactionService.toTransactionDTO(updatedTransaction);
     res.send(updatedTransactionDTO);
   } catch (err) {
@@ -58,7 +87,13 @@ export const updateTransactionById = async (req: Request, res: Response, next: N
 
 export const deleteTransactionById = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const deletedTransaction = await PTransactionService.deleteOne(req.user!, req.params.portfolioId, req.params.id);
+    const portfolioId = req.params.portfolioId;
+    const user = req.user!;
+    const hasAccess = await PortfolioService.hasAccess(user, portfolioId);
+    if (!hasAccess) {
+      throw new ErrorService(ErrorType.Unauthorized, ERROR_MESSAGES.PORTFOLIO_UNAUTHORIZED_ACTION);
+    }
+    const deletedTransaction = await PTransactionService.deleteOne(portfolioId, req.params.id);
     const deletedTransactionDTO = PTransactionService.toTransactionDTO(deletedTransaction);
     res.send(deletedTransactionDTO);
   } catch (err) {
